--- a/1.md
+++ b/1.md
@@ -15,24 +15,24 @@ record my first project 1
 the reason why I choose the project 
 * <font face="楷体">首先确定要做的是project 2，<img src="bqb.jpg" width=450 align=right>
 刚好可以记录我做其他的project的过程，作为一个记录来说挺有意思的
-* 现在只能打打python的代码，~~因为根本没有基础hhhh~~
-* 之后选择了project1，因为给了很大的发挥空间，我可以用自己的创意去弥补我技术上的不足
-* 学习新代码的时候还是很有意思的
+* 选择python作为代码，~~python yyds~~
+* 之后选择了project1，因为给了很大的发挥空间，可以用自己的创意去弥补我技术上的不足
+* 学习新代码、新模块的时候还是很有意思的
 <!-- slide -->
 # some difficulties😕 
 |序号|描述|解决方法
 | :---- | :--: | -----: |
 |A|首次使用pygame模块|CSDN是眞卟錯|
-|B|代码中字母的生成和随机|控制变量法|
+|B|代码中字母的生成和随机|控制变量法+试错|
 |C|md语法插入图片不好调整|换用html语言输入|
 <!-- slide -->
 ## DIfficulty A:pygame module
 ---
 * <font size=10>第一次使用pygame模块</font>
 <img src = "1000.png" width="1000">
-* Pygame常用函数（感谢CSDN和Github）😄 😄 😄
+* Pygame常用函数（感谢CSDN&Github&Stackoverflow）😄 😄 😄
 1.CSDN给出了一些常用函数的表
-2.GitHub上有许多用pygame编的小游戏，可以下下来看一些函数的实际应用
+2.GitHub上有许多用pygame编的小游戏，可以用来看一些函数的实际应用方法
 <!-- slide -->
 ## difficulties b:random
 ---
