--- a/1.md
+++ b/1.md
@@ -15,7 +15,7 @@ record my first project 1
 the reason why I choose the project 
 * <font face="楷体">首先确定要做的是project 2，<img src="bqb.jpg" width=450 align=right>
 刚好可以记录我做其他的project的过程，作为一个记录来说挺有意思的
-* 选择python作为代码，~~python yyds~~
+* 选择python作为代码,  (~~python yes~~)
 * 之后选择了project1，因为给了很大的发挥空间，可以用自己的创意去弥补我技术上的不足
 * 学习新代码、新模块的时候还是很有意思的
 <!-- slide -->
